<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.cary.activity.timecat.reglogin.PerfectInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <include layout="@layout/title_layout" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/ten"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivPerfectInfomationHead"
                    android:layout_width="121dp"
                    android:src="@mipmap/avatarw"
                    android:layout_height="121dp" />

                <TextView
                    android:id="@+id/tvPerfectInfomationHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18dp"
                    android:layout_marginTop="@dimen/ten"
                    android:textColor="@color/white"
                    android:text="@string/upload_head" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pleaseinput_nick"
                    android:padding="@dimen/eight"
                    android:background="@drawable/edit_transparency_bg"
                    android:drawableLeft="@mipmap/userw"
                    android:textColor="@color/white"
                    android:drawablePadding="@dimen/ten"
                    android:layout_marginTop="@dimen/fifteen"
                    android:textColorHint="@color/white"
                    android:id="@+id/etPerfectInformationNick"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten"
                    android:id="@+id/btUploadOk"
                    android:textColor="@color/white"
                    android:background="@drawable/login_lgbtn_shape"
                    android:layout_marginTop="@dimen/ten"
                    android:text="@string/upload_ok"/>
            </LinearLayout>




    </LinearLayout>

</android.support.constraint.ConstraintLayout>
