<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:paddingTop="@dimen/fifteen"
    tools:context=".login.LoginActivity">

    <include layout="@layout/title_layout" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/ten">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/loginPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_transparency_bg"
                    android:drawableLeft="@mipmap/telephonew"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/prompt_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:padding="@dimen/ten"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_transparency_bg"
                    android:drawableLeft="@mipmap/unlockw"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:padding="@dimen/ten"
                    android:singleLine="true"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/phone_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_lgbtn_shape"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/phone_register_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/red_tran_shape"
                android:text="老师入驻申请"
                android:textColor="@color/login_color_btn"
                android:textStyle="bold" />


            <CheckBox
                android:id="@+id/cbProtol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/twenty"
                android:button="@drawable/register_checkbox_style"
                android:checked="false"
                android:gravity="center"
                android:paddingLeft="@dimen/five"
                android:text="管理用户登录请选择"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_small" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>